# pyz3

./: README.md  pyproject.toml  versions.json
.github/workflows/: ci.yml
latest/: 404.html  CNAME  index.html
latest/CLI/: index.html
latest/COMPATIBILITY/: index.html
latest/C_CPP_INTEGRATION/: index.html
latest/DEPENDENCY_MANAGEMENT/: index.html
latest/DISTRIBUTION_QUICKSTART/: index.html
latest/NATIVE_COLLECTIONS/: index.html
latest/NEW_FEATURES/: index.html
latest/QUICK_REFERENCE/: index.html
latest/REPOSITORY_STRUCTURE/: index.html
latest/ROADMAP/: index.html
latest/VERSION_MANAGEMENT/: index.html
latest/adr/001-build-file-generation/: index.html
latest/adr/002-memory-management-strategy/: index.html
latest/api/: index.html
latest/api/errors/: index.html
latest/api/memory/: index.html
latest/api/performance/: index.html
latest/api/type-conversion/: index.html
latest/distribution/: index.html
latest/getting_started/: index.html
latest/guide/: index.html
latest/guide/_4_testing/: index.html
latest/guide/_5_memory/: index.html
latest/guide/_6_buffers/: index.html
latest/guide/classes/: index.html
latest/guide/debugging/: index.html
latest/guide/exceptions/: index.html
latest/guide/functions/: index.html
latest/guide/gil/: index.html
latest/guide/mmap/: index.html
latest/guide/modules/: index.html
latest/guide/new_features/: index.html
latest/guide/numpy/: index.html
latest/guide/type_coverage/: index.html
pyz3/: __main__.py  buildzig.py  init.py  scaffold.py
test/: test_init_deploy.py
