[project]
name = "pyz3"
version = "0.10.2"
description = "Build high-performance Python extensions in Zig with automatic memory management."
authors = [{ name = "amiya mandal", email = "amiya19mandal@pm.me" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["zig", "python", "extensions", "performance", "c-api", "bindings", "pyz3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Other",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
    "Operating System :: OS Independent",
]

dependencies = [
    "ziglang>=0.15.1",
    "pydantic>=2.3.0",
    "setuptools>=80.0.0",
    "numpy>=2.0.0",
    "pytest>=8.0.0", "pytest-asyncio>=1.3.0", "ruff>=0.14.0", "black>=25.0.0",
]

[project.optional-dependencies]
dist = ["build>=1.0.0", "twine>=5.0.0", "wheel>=0.43.0"]
docs = ["mkdocs-material>=9.2.6", "mkdocs-include-markdown-plugin>=7.1.5", "mike>=2.0.0"]
all = ["pyz3[dist,docs]"]

[project.urls]
Homepage = "https://github.com/pyz3-project/pyz3"
Repository = "https://github.com/pyz3-project/pyz3"
Documentation = "https://github.com/pyz3-project/pyz3"

[project.scripts]
pyz3 = "pyz3.__main__:main"

[project.entry-points."pytest11"]
pyz3 = "pyz3.pytest_plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pyz3"]

[tool.hatch.build.targets.sdist]
include = [
    "pyz3/**/*.py",
    "pyz3/src/**/*.zig",
    "pyz3/src/**/*.h",
    "pyz3/src/**/*.c",
    "pyz3/pyZ3-template/**/*",
]
exclude = ["example", "test", "docs"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.0",
    "black>=25.0.0",
    "numpy>=2.0.0",
]

[tool.ruff]
line-length = 120
exclude = ["pyz3/pyZ3-template"]

[tool.ruff.lint]
select = ["F", "E", "W", "UP", "I"]
unfixable = ["F841"]

[tool.pytest.ini_options]
testpaths = ["test", "example"]

# pyz3 extension module configuration

[tool.pyz3]
root = "example/"
build_zig = "pytest.build.zig"

[[tool.pyz3.ext_module]]
name = "example.args_types"
root = "example/args_types.zig"

[[tool.pyz3.ext_module]]
name = "example.exceptions"
root = "example/exceptions.zig"

[[tool.pyz3.ext_module]]
name = "example.hello"
root = "example/hello.zig"

[[tool.pyz3.ext_module]]
name = "example.gil"
root = "example/gil.zig"

[[tool.pyz3.ext_module]]
name = "example.memory"
root = "example/memory.zig"

[[tool.pyz3.ext_module]]
name = "example.modules"
root = "example/modules.zig"

[[tool.pyz3.ext_module]]
name = "example.pytest"
root = "example/pytest.zig"

[[tool.pyz3.ext_module]]
name = "example.result_types"
root = "example/result_types.zig"

[[tool.pyz3.ext_module]]
name = "example.functions"
root = "example/functions.zig"

[[tool.pyz3.ext_module]]
name = "example.classes"
root = "example/classes.zig"

[[tool.pyz3.ext_module]]
name = "example.buffers"
root = "example/buffers.zig"

[[tool.pyz3.ext_module]]
name = "example.iterators"
root = "example/iterators.zig"

[[tool.pyz3.ext_module]]
name = "example.operators"
root = "example/operators.zig"

[[tool.pyz3.ext_module]]
name = "example.code"
root = "example/code.zig"

[[tool.pyz3.ext_module]]
name = "example.new_container_types"
root = "example/new_container_types.zig"

[[tool.pyz3.ext_module]]
name = "example.c_integration"
root = "example/c_integration.zig"
c_sources = ["example/c_math_helper.c"]
c_include_dirs = ["example/"]
c_flags = ["-O2"]

[[tool.pyz3.ext_module]]
name = "example.fastpath_bench"
root = "example/fastpath_bench.zig"

[[tool.pyz3.ext_module]]
name = "example.gil_bench"
root = "example/gil_bench.zig"

[[tool.pyz3.ext_module]]
name = "example.simd_example"
root = "example/simd_example.zig"

[[tool.pyz3.ext_module]]
name = "example.native_collections_example"
root = "example/native_collections_example.zig"
c_sources = ["pyz3/src/native/native_dict.c", "pyz3/src/native/native_array.c"]
c_include_dirs = ["pyz3/src/native/"]
c_flags = ["-std=c99"]

[[tool.pyz3.ext_module]]
name = "example.numpy_example"
root = "example/numpy_example.zig"
